[package]
name = "ggc"
version = "0.1.0"
authors = ["Ash (ashisbored) <ash.b.7558@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# io
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
tokio-util = "0.6"
futures = "0.3"

# logging
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

# error handling
thiserror = "1"

# config
serde = { version = "1", features = ["derive"] }
toml = "0.5"

# parsing
url = "2"
new_mime_guess = "3"
